BUG 2661 - sonar issues in learning-switch
Some of sonar issues in learning-switch artifact were solved.

Change-Id: I423136cb503c8d9922eb7064ab2bd3eddd24d411
Signed-off-by: Jozef Gloncak <jgloncak@cisco.com>